--- a/SemesterProject/app/src/main/res/layout/activity_science_matter_content.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_science_matter_content.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnMatter1"
+        android:id="@+id/btnQuizSolids"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnQuizGases"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -57,7 +57,7 @@
         app:layout_constraintVertical_bias="0.013" />
 
     <Button
-        android:id="@+id/btnMatter2"
+        android:id="@+id/btnQuizLiquids"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
